Update schema (#434)
* Fix

* WIP

* WIP

* WIP

* WIP

* WIP
