# app/models/comment_post.rb
@@ -1,8 +1,8 @@
 # typed: strict
 # frozen_string_literal: true
 
-class CommentedPost < ApplicationRecord
-  has_one :post, as: :postable, dependent: :restrict_with_exception, touch: true
+class CommentPost < ApplicationRecord
+  belongs_to :post
 
   validates :comment, length: {maximum: Commentable::MAXIMUM_COMMENT_LENGTH}, presence: true
 end
