# app/models/forms/repost.rb
@@ -7,20 +7,39 @@ class Forms::Repost < Forms::Base
 
   attribute :post_id, :string
 
-  validates :post, presence: true
+  validates :profile, presence: true
+  validates :target_post, presence: true
+  validates :original_follow, presence: true
 
-  sig { returns(T.nilable(Post)) }
-  def post
-    Post.find_by(id: post_id)
+  sig { returns(T.nilable(Follow)) }
+  def original_follow
+    return if target_post.nil?
+
+    profile!.follows.find_by(target_profile_id: target_post!.original_post.profile_id)
+  end
+
+  sig { returns(Follow) }
+  def original_follow!
+    T.must(original_follow)
   end
 
   sig { returns(Post) }
-  def post!
-    T.cast(post, Post)
+  def original_post
+    target_post!.original_post
   end
 
   sig { returns(Profile) }
   def profile!
     T.cast(profile, Profile)
+  end
+
+  sig { returns(T.nilable(Post)) }
+  def target_post
+    Post.find_by(id: post_id)
+  end
+
+  sig { returns(Post) }
+  def target_post!
+    T.must(target_post)
   end
 end
